// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Warning renders with a count 1`] = `

<div
  role="button"
  class="flex cursor-default items-center justify-between rounded-lg px-3 py-2 transition-colors duration-250 bg-red-500/5 dark:bg-red-600/10 hover:bg-red-500/15 border-[1px] border-red-600/80 hover:border-red-500/80"
>
  <span class="mr-1.5 mb-0.5 flex items-center justify-center text-red-600 dark:text-red-500">
    <gui-alert-triangle-icon size="16">
    </gui-alert-triangle-icon>
  </span>
  <p class="inline-flex items-baseline gap-1.5 text-sm font-medium text-red-600 dark:text-red-500">
    <span class="font-mono tabular-nums">
      1
    </span>
    test warning
  </p>
</div>

`;

exports[`Warning renders with basic options 1`] = `

<div
  role="button"
  class="flex cursor-default items-center justify-between rounded-lg px-3 py-2 transition-colors duration-250 bg-red-500/5 dark:bg-red-600/10 hover:bg-red-500/15 border-[1px] border-red-600/80 hover:border-red-500/80"
>
  <span class="mr-1.5 mb-0.5 flex items-center justify-center text-red-600 dark:text-red-500">
    <gui-alert-triangle-icon size="16">
    </gui-alert-triangle-icon>
  </span>
  <p class="inline-flex items-baseline gap-1.5 text-sm font-medium text-red-600 dark:text-red-500">
    test warning
  </p>
</div>

`;

exports[`Warning renders with custom className 1`] = `

<div
  role="button"
  class="flex cursor-default items-center justify-between rounded-lg px-3 py-2 transition-colors duration-250 bg-red-500/5 dark:bg-red-600/10 hover:bg-red-500/15 border-[1px] border-red-600/80 hover:border-red-500/80 test-classname"
>
  <span class="mr-1.5 mb-0.5 flex items-center justify-center text-red-600 dark:text-red-500">
    <gui-alert-triangle-icon size="16">
    </gui-alert-triangle-icon>
  </span>
  <p class="inline-flex items-baseline gap-1.5 text-sm font-medium text-red-600 dark:text-red-500">
    test warning
  </p>
</div>

`;

exports[`Warning renders with custom icon 1`] = `

<div
  role="button"
  class="flex cursor-default items-center justify-between rounded-lg px-3 py-2 transition-colors duration-250 bg-red-500/5 dark:bg-red-600/10 hover:bg-red-500/15 border-[1px] border-red-600/80 hover:border-red-500/80"
>
  <span class="mr-1.5 mb-0.5 flex items-center justify-center text-red-600 dark:text-red-500">
    <gui-smile-icon size="16">
    </gui-smile-icon>
  </span>
  <p class="inline-flex items-baseline gap-1.5 text-sm font-medium text-red-600 dark:text-red-500">
    test warning
  </p>
</div>

`;

exports[`Warning renders with different severity levels > Warning renders with severity: critical 1`] = `

<div
  role="button"
  class="flex cursor-default items-center justify-between rounded-lg px-3 py-2 transition-colors duration-250 bg-red-500/5 dark:bg-red-600/10 hover:bg-red-500/15 border-[1px] border-red-600/80 hover:border-red-500/80"
>
  <span class="mr-1.5 mb-0.5 flex items-center justify-center text-red-600 dark:text-red-500">
    <gui-alert-triangle-icon size="16">
    </gui-alert-triangle-icon>
  </span>
  <p class="inline-flex items-baseline gap-1.5 text-sm font-medium text-red-600 dark:text-red-500">
    test warning
  </p>
</div>

`;

exports[`Warning renders with different severity levels > Warning renders with severity: high 1`] = `

<div
  role="button"
  class="flex cursor-default items-center justify-between rounded-lg px-3 py-2 transition-colors duration-250 bg-red-500/5 dark:bg-red-600/10 hover:bg-red-500/15 border-[1px] border-red-600/80 hover:border-red-500/80"
>
  <span class="mr-1.5 mb-0.5 flex items-center justify-center text-red-600 dark:text-red-500">
    <gui-alert-triangle-icon size="16">
    </gui-alert-triangle-icon>
  </span>
  <p class="inline-flex items-baseline gap-1.5 text-sm font-medium text-red-600 dark:text-red-500">
    test warning
  </p>
</div>

`;

exports[`Warning renders with different severity levels > Warning renders with severity: low 1`] = `

<div
  role="button"
  class="flex cursor-default items-center justify-between rounded-lg px-3 py-2 transition-colors duration-250 bg-gray-500/5 dark:bg-gray-600/10 hover:bg-gray-500/15 border-[1px] border-gray-600/80 hover:border-gray-500/80"
>
  <span class="mr-1.5 mb-0.5 flex items-center justify-center text-gray-600 dark:text-gray-400">
    <gui-alert-triangle-icon size="16">
    </gui-alert-triangle-icon>
  </span>
  <p class="inline-flex items-baseline gap-1.5 text-sm font-medium text-gray-600 dark:text-gray-400">
    test warning
  </p>
</div>

`;

exports[`Warning renders with different severity levels > Warning renders with severity: medium 1`] = `

<div
  role="button"
  class="flex cursor-default items-center justify-between rounded-lg px-3 py-2 transition-colors duration-250 bg-yellow-500/5 dark:bg-yellow-600/10 hover:bg-yellow-500/15 border-[1px] border-yellow-600/80 hover:border-yellow-500/80"
>
  <span class="mr-1.5 mb-0.5 flex items-center justify-center text-yellow-700 dark:text-yellow-600">
    <gui-alert-triangle-icon size="16">
    </gui-alert-triangle-icon>
  </span>
  <p class="inline-flex items-baseline gap-1.5 text-sm font-medium text-yellow-700 dark:text-yellow-600">
    test warning
  </p>
</div>

`;
